# comment.unorthodoxdev.net

./: .env_example  .gitignore  Cargo.toml  LICENSE  README.md  comments.db  diesel.toml  log_config.yaml  sample_dotenv  update.sh
.github/ISSUE_TEMPLATE/: comment-service-down.md  vulnerability-responsible-disclosure.md
backup/: .indexme
cmanager/: .gitignore  Cargo.toml  comments.db
cmanager/src/: get.rs  lib.rs  new.rs
cmanager/tests/: new_comment.rs  sql_injections.rs
configurations/: log4rs.yaml
docs/: nginx-config.md  running.md  slqite-commands.md  sqlite-commands.md  updating-on-server.md
documentation/: CHANGELOG.md  getting-started.md
migrations/2024-06-07-174216_comments/: up.sql
src/: api.rs  build.rs  db.rs  get.rs  main.rs  new.rs  schema.rs
src/api/: auth.rs  comment.rs  mod.rs  models.rs
src/api/v1/: mod.rs
src/database/: auth.rs  comment.rs
src/database/comment/: create.rs  read.rs
static/: current.css
templates/: current.css  gruvbox.css  index.html
