[package]
name = "comment_unorthodoxdev_net"
version = "0.1.2"
edition = "2021"

[lib]
name = "cmanager"
path = "cmanager/src/lib.rs"

[dependencies]
actix-web = "4.3.1"
askama = "0.12.0"
askama_actix = "0.14.0"
chrono = "0.4.26"
serde = { version = "1.0", features = ["derive"] }
sha256 = "1.2.2"
sqlite = "0.31.0"
uuid = {version = "1.4.1", features = ["v4"] }