[package]
name = "comments"
version = "0.1.0"
edition = "2021"

[dependencies]
# diesel = { version = "2.2.0", features = ["sqlite"] }
sqlite = "0.36.0"

clap = { version = "4.5.4", features = ["derive"] }
dotenv = "0.15.0"
log = "0.4.21"
log4rs = "1.3.0"
sanitizer = "0.1.6"
uuid = { version = "1.8.0", features = ["v4"] }
