[package]
name = "comment_unorthodoxdev_net"
version = "0.1.2"
edition = "2021"

[lib]
name = "cmanager"
path = "cmanager/src/lib.rs"

[dependencies]
actix-files = "0.6.2"
actix-cors = "0.6"
actix-web = "4.3.1"
askama = "0.12.0"
askama_actix = "0.14.0"
chrono = "0.4.26"
log = "0.4.19"
log4rs = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha256 = "1.2.2"
sqlite = "0.31.0"
uuid = {version = "1.4.1", features = ["v4"] }
